--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,5 +5,7 @@ class="bg-[#030508]
        inset-x-0
        bottom-0
        p-6">
+       <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
        <p> &copy; 2022 Cloudia GmbH</p>
+</div>
 </footer>
