--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,8 +29,8 @@
         </div>
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0 flex items-center">
-            <img class="block lg:hidden h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg" alt="Workflow">
-            <img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-500-mark-white-text.svg" alt="Workflow">
+            <img class="block lg:hidden h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+            <img class="hidden lg:block h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
           </div>
           <div class="hidden sm:block sm:ml-6">
             <div class="flex space-x-4">
@@ -47,11 +47,11 @@
         <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 
           <div class="ml-3 relative">
-            <button class="bg-gray-100 text-black px-3 py-2 rounded-md text-sm font-medium">Log in</button>
+            <button routerLink="/login" class="bg-gray-100 text-black px-3 py-2 rounded-md text-sm font-medium">Log in</button>
           </div>
 
           <div class="ml-3 relative">
-            <button class="bg-[#27d17f] px-3 py-2 text-white rounded-md text-sm font-medium">Sign-up</button>
+            <button routerLink="/register" class="bg-[#27d17f] px-3 py-2 text-white rounded-md text-sm font-medium">Sign-up</button>
           </div>
         </div>
       </div>
