feat: added modules

--- a/src/app/lost-password/lost-password.component.html
+++ b/src/app/lost-password/lost-password.component.html
@@ -1,1 +1,24 @@
-<p>lost-password works!</p>
+<nav class="bg-white">
+    <div class="relative flex items-center justify-between h-16">
+
+      <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+        <div class="pl-5 flex-shrink-0 flex items-center">
+          <img class="block lg:hidden h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+          <img class="hidden lg:block h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+        </div>
+      </div>
+      <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+
+        <div class="ml-3 relative">
+          <a routerLink="/help" class="text-black px-3 py-2 text-sm font-bold">Help</a>
+        </div>
+
+        <div class="pr-5 ml-3 relative">
+          <button routerLink="/login" class="border-emerald-500  text-black px-3 py-2 transition-colors duration-150 border rounded-md text-sm font-medium">Log in</button>
+        </div>
+
+      </div>
+    </div>
+
+
+</nav>
