--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,65 @@
-<div class="max-w-4xl mx-auto px-2 sm:px-6 lg:px-8">
-    <div class="mt-10 sm:mt-0">
-        <div class="md:grid md:grid-cols-3 md:gap-6">
-          <div class="mt-5 md:mt-0 md:col-span-2">
+<nav class="bg-white">
+  <div class="relative flex items-center justify-between h-16">
 
-            <h2 class="text-2xl text-center leading-7  text-gray-900 sm:text-3xl sm:truncate">User Login</h2>
+    <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+      <div class="pl-5 flex-shrink-0 flex items-center">
+        <img class="block lg:hidden h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+        <img class="hidden lg:block h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+      </div>
+    </div>
+    <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 
-            <form action="#" method="POST">
-                <div class="px-4 py-5 bg-white sm:p-6">
-                  <div class="grid grid-cols-6 gap-6">
+      <div class="ml-3 relative">
+        <a routerLink="/help" class="text-black px-3 py-2 text-sm font-bold">Help</a>
+      </div>
 
-                    <div class="col-span-6 sm:col-span-6">
-                      <label for="first-name" class="block text-sm font-medium text-gray-700">Email address</label>
-                      <input type="email" name="email-address" id="email-address" autocomplete="email" class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                    </div>
+      <div class="pr-5 ml-3 relative">
+        <button routerLink="/register"
+          class="border-emerald-500  text-black px-3 py-2 transition-colors duration-150 border rounded-md text-sm font-medium">Sign up</button>
+      </div>
 
-                    <div class="col-span-6 sm:col-span-6">
-                        <label for="first-name" class="block text-sm font-medium text-gray-700">Password</label>
-                        <input type="password" name="password" id="password-address" autocomplete="new-password" class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                        <a routerLink="/lost-password" class="text-emerald-500">Forgot your password?</a>
-                    </div>
-      
-                  </div>
-                </div>
-                <div class="px-4 py-3 sm:px-6">
-                    <button type="submit" class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Log in</button>
-                </div>  
-                <div class="px-4 py-3 sm:px-6">
-                    <button routerLink="/register" class="w-full h-12 px-5 text-black transition-colors duration-150 border border-emerald-500 rounded-lg focus:shadow-outline ">Don't have an account yet?</button>     
-                </div>
-            </form>
+    </div>
+  </div>
+
+
+</nav>
+<!-- max-w-4xl mx-auto px-2 sm:px-6 lg:px-8 -->
+<div class="flex items-center justify-center h-screen">
+  <div class="mt-10 sm:mt-0">
+
+    <h2 class="text-2xl text-center leading-7  text-gray-900 sm:text-3xl sm:truncate">User Login</h2>
+
+    <form action="#" method="POST">
+      <div class="px-4 py-5 bg-white sm:p-6">
+        <div class="grid grid-cols-6 gap-6">
+
+          <div class="col-span-6 sm:col-span-6">
+            <label for="first-name" class="block text-sm font-medium text-gray-700">Email address</label>
+            <input type="email" name="email-address" id="email-address" autocomplete="email"
+              class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
+
+          <div class="col-span-6 sm:col-span-6">
+            <label for="first-name" class="block text-sm font-medium text-gray-700">Password</label>
+            <input type="password" name="password" id="password-address" autocomplete="new-password"
+              class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <a routerLink="/lost-password" class="text-emerald-500">Forgot your password?</a>
+          </div>
+
         </div>
       </div>
+      <div class="px-4 py-3 sm:px-6">
+        <button type="submit"
+          class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Log
+          in</button>
+      </div>
+      <div class="px-4 py-3 sm:px-6">
+        <button routerLink="/register"
+          class="w-full h-12 px-5 text-black transition-colors duration-150 border border-emerald-500 rounded-lg focus:shadow-outline ">Don't
+          have an account yet?</button>
+      </div>
+    </form>
+  </div>
+
+
 </div>
