--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,33 @@
-<div class="max-w-4xl mx-auto px-2 sm:px-6 lg:px-8">
-    <div class="mt-10 sm:mt-0">
-        <div class="md:grid md:grid-cols-3 md:gap-6">
-          <div class="mt-5 md:mt-0 md:col-span-2">
+<nav class="bg-white">
+    <div class="relative flex items-center justify-between h-16">
 
-            <h2 class="text-2xl text-center leading-7  text-gray-900 sm:text-3xl sm:truncate">Create your Cloudia account</h2>
+      <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+        <div class="pl-5 flex-shrink-0 flex items-center">
+          <img class="block lg:hidden h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+          <img class="hidden lg:block h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+        </div>
+      </div>
+      <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+
+        <div class="ml-3 relative">
+          <a routerLink="/help" class="text-black px-3 py-2 text-sm font-bold">Help</a>
+        </div>
+
+        <div class="pr-5 ml-3 relative">
+          <button routerLink="/login" class="border-emerald-500  text-black px-3 py-2 transition-colors duration-150 border rounded-md text-sm font-medium">Log in</button>
+        </div>
+
+      </div>
+    </div>
+
+
+</nav>
+
+
+<div class="flex items-center justify-center h-screen">
+  <div class="mt-10 sm:mt-0">
+
+            <h2 class=" text-2xl text-center leading-7 text-gray-900 sm:text-3xl sm:truncate">Create your Cloudia account</h2>
 
             <form action="#" method="POST">
                 <div class="px-4 py-5 bg-white sm:p-6">
@@ -45,6 +69,4 @@
                 </div>
             </form>
           </div>
-        </div>
-      </div>
 </div>
