feat: added remaining sites for login

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -62,7 +62,7 @@
                   </div>
                 </div>
                 <div class="px-4 py-3 sm:px-6">
-                    <button type="submit" class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Create account</button>
+                    <button routerLink="/success" class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Create account</button>
                 </div>  
                 <div class="px-4 py-3 sm:px-6">
                     <button routerLink="/login" class="w-full h-12 px-5 text-black transition-colors duration-150 border border-emerald-500 rounded-lg focus:shadow-outline ">Already have an account?</button>     
