--- a/src/app/lost-password/lost-password.component.html
+++ b/src/app/lost-password/lost-password.component.html
@@ -28,20 +28,20 @@
 
     <h2 class="text-2xl text-center leading-7  text-gray-900 sm:text-3xl sm:truncate">Reset your password</h2>
 
-    <form>
+    <form [formGroup]="formLostPassword">
       <div class="px-4 py-5 bg-white sm:p-6">
         <div class="grid grid-cols-6 gap-6">
 
           <div class="col-span-6 sm:col-span-6">
             <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
-            <input type="email" name="email" id="email" autocomplete="email"
+            <input type="email" name="email" id="email" autocomplete="email" formControlName="email" 
               class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
           </div>
 
         </div>
       </div>
       <div class="px-4 py-3 sm:px-6">
-        <button
+        <button (click)="lostPassword()"
           class="w-full h-12 px-5 text-black font-bold transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Request
           password reset</button>
       </div>
