--- a/src/app/unauthorized/navbar/navbar.component.html
+++ b/src/app/unauthorized/navbar/navbar.component.html
@@ -34,8 +34,8 @@
       </div>
       <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex-shrink-0 flex items-center">
-          <img class="block lg:hidden h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
-          <img class="hidden lg:block h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
+          <img class="block lg:hidden h-8 w-auto" src="../../../assets/cloudia-logo.png" alt="Cloudia">
+          <img class="hidden lg:block h-8 w-auto" src="../../../assets/cloudia-logo.png" alt="Cloudia">
         </div>
         <div class="hidden sm:block sm:ml-6">
 
@@ -107,3 +107,4 @@
     </div>
   </div>
 </nav>
+
