--- a/src/app/unauthorized/register/register.component.html
+++ b/src/app/unauthorized/register/register.component.html
@@ -1,27 +1,26 @@
-<nav class="bg-white">
-    <div class="relative flex items-center justify-between h-16">
+<!--<nav class="bg-white">-->
+<!--    <div class="relative flex items-center justify-between h-16">-->
 
-      <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="pl-5 flex-shrink-0 flex items-center">
-          <img class="block lg:hidden h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
-          <img class="hidden lg:block h-8 w-auto" src="../../assets/cloudia-logo.png" alt="Cloudia">
-        </div>
-      </div>
-      <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+<!--      <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">-->
+<!--        <div class="pl-5 flex-shrink-0 flex items-center">-->
+<!--          <img class="block lg:hidden h-8 w-auto" src="../../../assets/cloudia-logo.png" alt="Cloudia">-->
+<!--          <img class="hidden lg:block h-8 w-auto" src="../../../assets/cloudia-logo.png" alt="Cloudia">-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">-->
 
-        <div class="ml-3 relative">
-          <a routerLink="/help" class="text-black px-3 py-2 text-sm font-bold">Help</a>
-        </div>
+<!--        <div class="ml-3 relative">-->
+<!--          <a routerLink="/help" class="text-black px-3 py-2 text-sm font-bold">Help</a>-->
+<!--        </div>-->
 
-        <div class="pr-5 ml-3 relative">
-          <button routerLink="/login" class="border-emerald-500  text-black px-3 py-2 transition-colors duration-150 border rounded-md text-sm font-medium">Log in</button>
-        </div>
+<!--        <div class="pr-5 ml-3 relative">-->
+<!--          <button routerLink="/login" class="border-emerald-500  text-black px-3 py-2 transition-colors duration-150 border rounded-md text-sm font-medium">Log in</button>-->
+<!--        </div>-->
 
-      </div>
-    </div>
+<!--      </div>-->
+<!--    </div>-->
 
-
-</nav>
+<!--</nav>-->
 
 
 <div class="flex items-center justify-center h-screen">
@@ -36,11 +35,11 @@
                     <div class="col-span-6 sm:col-span-3">
                       <input type="text" name="first-name" id="first-name" autocomplete="given-name" placeholder="First name" formControlName="firstName"  class="mt-1 h-12 px-3 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                     </div>
-      
+
                     <div class="col-span-6 sm:col-span-3">
                       <input type="text" name="last-name" id="last-name" autocomplete="family-name" placeholder="Last name" formControlName="lastName"  class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                     </div>
-      
+
                     <div class="col-span-6 sm:col-span-6">
                       <input type="email" name="email-address" id="email-address" autocomplete="email" placeholder="Email address" formControlName="email"  class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                     </div>
@@ -48,7 +47,7 @@
                     <div class="col-span-6 sm:col-span-6">
                         <input type="password" name="password" id="password-address" autocomplete="new-password" placeholder="Password" formControlName="password"  class="mt-1 px-3 h-12 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                       </div>
-      
+
                     <div class="col-span-6 sm:col-span-6">
                       <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
                       <select id="country" name="country" autocomplete="country-name" formControlName="national" class="mt-1 h-12 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
@@ -63,9 +62,9 @@
                 </div>
                 <div class="px-4 py-3 sm:px-6">
                     <button (click)="register()" class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">Create account</button>
-                </div>  
+                </div>
                 <div class="px-4 py-3 sm:px-6">
-                    <button routerLink="/login" class="w-full h-12 px-5 text-black transition-colors duration-150 border border-emerald-500 rounded-lg focus:shadow-outline ">Already have an account?</button>     
+                    <button routerLink="/login" class="w-full h-12 px-5 text-black transition-colors duration-150 border border-emerald-500 rounded-lg focus:shadow-outline ">Already have an account?</button>
                 </div>
             </form>
           </div>
