feat: show + delete user

--- a/src/app/unauthorized/help/help.component.html
+++ b/src/app/unauthorized/help/help.component.html
@@ -1,1 +1,5 @@
-<p>help works!</p>
+<div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+  <div class="relative flex items-center justify-between h-16">
+    <p>help works!</p>
+  </div>
+</div>
