--- a/src/app/authorized/home/home.component.html
+++ b/src/app/authorized/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+  <div class="relative flex items-center justify-between h-16">
+    <p>home works!</p>
+  </div>
+</div>
