--- a/src/app/authorized/profile/profile.component.html
+++ b/src/app/authorized/profile/profile.component.html
@@ -1,1 +1,88 @@
-<p>profile works!</p>
+<div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+
+  <div class="mt-10 sm:mt-0">
+    <div class="md:grid md:grid-cols-3 md:gap-6">
+      <div class="md:col-span-1">
+        <div class="px-4 sm:px-0">
+          <h3 class="text-lg font-medium leading-6 text-gray-900">Personal Information</h3>
+          <p class="mt-1 text-sm text-gray-600">Delete or update your profile information.</p>
+        </div>
+      </div>
+      <div class="mt-5 md:mt-0 md:col-span-2">
+        <form >
+          <div class="shadow overflow-hidden sm:rounded-md">
+            <div class="px-4 py-5 bg-white sm:p-6">
+              <div class="grid grid-cols-6 gap-6">
+
+                <div class="col-span-6 sm:col-span-1">
+                  <label for="user-id" class="block text-sm font-medium text-gray-700">ID</label>
+                  <input [(ngModel)]="id" type="text" name="user-id" id="user-id"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
+                </div>
+
+                <div class="col-span-6 sm:col-span-5">
+                </div>
+                <div class="col-span-6 sm:col-span-3">
+                  <label for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
+                  <input [(ngModel)]="firstName" type="text" name="first-name" id="first-name"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="col-span-6 sm:col-span-3">
+                  <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
+                  <input [(ngModel)]="lastName" type="text" name="last-name" id="last-name"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="col-span-6 sm:col-span-4">
+                  <label for="email-address" class="block text-sm font-medium text-gray-700">Email address</label>
+                  <input [(ngModel)]="email" type="text" name="email-address" id="email-address"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="col-span-6 sm:col-span-4">
+                  <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+                  <input [(ngModel)]="password" type="text" name="password" id="password"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="col-span-6 sm:col-span-3">
+                  <label for="created-at" class="block text-sm font-medium text-gray-700">Created at</label>
+                  <input value= "{{createdAt | date:'medium'}}" type="text" name="created-at" id="created-at"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                         disabled>
+                </div>
+
+                <div class="col-span-6 sm:col-span-3">
+                  <label for="updated-at" class="block text-sm font-medium text-gray-700">Updated at</label>
+                  <input value= "{{updatedAt | date:'medium'}}" type="text" name="updated-at" id="updated-at"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                         disabled>
+                </div>
+
+                <div class="col-span-6 sm:col-span-3">
+                  <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
+                  <select id="country" name="country"
+                          class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
+                    <option>United States</option>
+                    <option>Canada</option>
+                    <option>Mexico</option>
+                  </select>
+                </div>
+
+              </div>
+            </div>
+            <div class="flex space-x-2 justify-end p-2">
+              <div>
+                <button type="button" (click)="delete()" class="inline-block px-6 py-2.5 p bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg focus:bg-red-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red-800 active:shadow-lg transition duration-150 ease-in-out">Delete</button>
+                <button type="button" class="inline-block px-6 py-2.5 bg-transparent text-emerald-600 font-medium text-xs leading-tight uppercase rounded hover:text-emerald-700 hover:bg-gray-100 focus:bg-emerald-100 focus:outline-none focus:ring-0 active:bg-gray-200 transition duration-150 ease-in-out">Update</button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+</div>
