fix: error message in tests

--- a/src/app/authorized/profile/profile.component.html
+++ b/src/app/authorized/profile/profile.component.html
@@ -16,34 +16,34 @@
 
                 <div class="col-span-6 sm:col-span-1">
                   <label for="user-id" class="block text-sm font-medium text-gray-700">ID</label>
-                  <input [(ngModel)]="id" type="text" name="user-id" id="user-id"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" disabled>
+                  <input type="text" name="user-id" id="user-id"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="id" disabled>
                 </div>
 
                 <div class="col-span-6 sm:col-span-5">
                 </div>
                 <div class="col-span-6 sm:col-span-3">
                   <label for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
-                  <input [(ngModel)]="firstName" type="text" name="first-name" id="first-name"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                  <input  type="text" name="first-name" id="first-name"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="firstName">
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
                   <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
-                  <input [(ngModel)]="lastName" type="text" name="last-name" id="last-name"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                  <input  type="text" name="last-name" id="last-name"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="lastName">
                 </div>
 
                 <div class="col-span-6 sm:col-span-4">
                   <label for="email-address" class="block text-sm font-medium text-gray-700">Email address</label>
-                  <input [(ngModel)]="email" type="text" name="email-address" id="email-address"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                  <input type="text" name="email-address" id="email-address"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"  [(ngModel)]="email">
                 </div>
 
                 <div class="col-span-6 sm:col-span-4">
                   <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                  <input [(ngModel)]="password" type="text" name="password" id="password"
-                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                  <input  type="text" name="password" id="password"
+                         class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [(ngModel)]="password">
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
