feat: ui for compute engine

--- a/src/app/unauthorized/navbar/navbar.component.html
+++ b/src/app/unauthorized/navbar/navbar.component.html
@@ -52,7 +52,7 @@
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                aria-current="page">Features</a>
 
-            <a routerLink="/business"
+            <a routerLink="/"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Business</a>
 
             <a routerLink="/company"
