--- a/src/app/unauthorized/navbar/navbar.component.html
+++ b/src/app/unauthorized/navbar/navbar.component.html
@@ -34,49 +34,49 @@
       </div>
       <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex-shrink-0 flex items-center">
-          <img class="block lg:hidden h-8 w-auto" src="../../../assets/cloudia-logo.png" alt="Cloudia">
-          <img class="hidden lg:block h-8 w-auto" src="../../../assets/cloudia-logo.png" alt="Cloudia">
+          <img class="block lg:hidden h-8 w-auto" i18n-alt src="../../../assets/cloudia-logo.png" alt="Cloudia">
+          <img class="hidden lg:block h-8 w-auto" i18n-alt src="../../../assets/cloudia-logo.png" alt="Cloudia">
         </div>
         <div class="hidden sm:block sm:ml-6">
 
           <div class="flex space-x-4" *ngIf="this.authenticationService.isLoggedIn">
-            <a routerLink="/home"
+            <a i18n routerLink="/home"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Home</a>
 
-            <a routerLink="/profile"
+            <a i18n routerLink="/profile"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Profile</a>
           </div>
 
           <div class="flex space-x-4" *ngIf="!this.authenticationService.isLoggedIn">
-            <a routerLink="/features"
+            <a i18n routerLink="/features"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"
                aria-current="page">Features</a>
 
-            <a routerLink="/"
+            <a i18n routerLink="/"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Business</a>
 
-            <a routerLink="/company"
+            <a i18n routerLink="/company"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Company</a>
 
-            <a routerLink="/help"
+            <a i18n routerLink="/help"
                class="text-black hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Help</a>
           </div>
         </div>
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 
-        <div class="ml-3 relative" *ngIf="!this.authenticationService.isLoggedIn">
+        <div i18n class="ml-3 relative" *ngIf="!this.authenticationService.isLoggedIn">
           <button routerLink="/login" class="bg-gray-100 text-black px-3 py-2 rounded-md text-sm font-medium">Log in
           </button>
         </div>
 
-        <div class="ml-3 relative" *ngIf="!this.authenticationService.isLoggedIn">
+        <div i18n class="ml-3 relative" *ngIf="!this.authenticationService.isLoggedIn">
           <button routerLink="/register" class="bg-[#27d17f] px-3 py-2 text-white rounded-md text-sm font-medium">
             Sign-up
           </button>
         </div>
 
-        <div class="ml-3 relative" *ngIf="this.authenticationService.isLoggedIn">
+        <div i18n class="ml-3 relative" *ngIf="this.authenticationService.isLoggedIn">
           <button (click)="logout()" class="border-red-600 text-black px-3 py-2 transition-colors duration-150 border rounded-md text-sm font-medium">Log out
           </button>
         </div>
