feat: added remaining sites

--- a/src/app/unauthorized/features/features.component.html
+++ b/src/app/unauthorized/features/features.component.html
@@ -1,5 +1,25 @@
 <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-  <div class="relative flex items-center justify-between h-16">
-    <p>features works!</p>
+  <div class="mt-10 sm:mt-0">
+    <div class="md:grid md:grid-cols-3 md:gap-6">
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <img src="../../../assets/aws.png" alt="Amazon Web Services" >
+
+        </div>
+      </div>
+
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <img src="../../../assets/gcp.png" alt="Google Cloud" >
+
+        </div>
+      </div>
+      <div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <img src="../../../assets/azure.png" alt="Azure" >
+
+        </div>
+      </div>
+    </div>
   </div>
 </div>
