--- a/src/app/authorized/history/history.component.html
+++ b/src/app/authorized/history/history.component.html
@@ -1,5 +1,5 @@
 <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
   <div class="relative flex items-center justify-between h-16">
-    <p>company works!</p>
+    <p>history works!</p>
   </div>
 </div>
