--- a/src/app/authorized/postgresql/postgresql.component.html
+++ b/src/app/authorized/postgresql/postgresql.component.html
@@ -1,71 +1,104 @@
 <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
   <div class="mt-10 sm:mt-0">
     <div class="md:grid md:grid-cols-3 md:gap-6">
+
       <div>
-        <form>
-          <div class="shadow overflow-hidden sm:rounded-md">
-            <div class="px-4 py-5 bg-white sm:p-6">
-              <div class="grid grid-cols-1">
-                <h3 class="text-2xl">GCP</h3>
-              </div>
-              <div class="grid grid-cols-1">
-                <h3 class="text-xl text-gray-400">Compute Engine</h3>
-              </div>
-
-
-
-
-
-              <div class="grid grid-cols-1 pt-4">
-                <button
-                  class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">
-                  Calculate
-                </button>
-              </div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <div class="px-4 py-5 bg-white sm:p-6">
+            <div class="grid grid-cols-1">
+              <h3 class="text-2xl">Provider A</h3>
             </div>
-
+            <div class="grid grid-cols-1 pt-2">
+              <select id="provider-a" [(ngModel)]="selectedProviderA"
+                      class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
+                <option *ngFor="let o of optionsProviderA">
+                  {{o.name}}
+                </option>
+              </select>
+            </div>
           </div>
-        </form>
+
+          <div *ngIf="selectedProviderA === 'AWS'">
+            <app-aws-relational-database-service></app-aws-relational-database-service>
+          </div>
+
+          <div *ngIf="selectedProviderA === 'GCP'">
+            <app-gcp-cloud-sql></app-gcp-cloud-sql>
+          </div>
+
+          <div *ngIf="selectedProviderA === 'Azure'">
+            <app-azure-postgresql></app-azure-postgresql>
+          </div>
+
+        </div>
       </div>
 
       <div>
-        <form>
-          <div class="shadow overflow-hidden sm:rounded-md">
-            <div class="px-4 py-5 bg-white sm:p-6">
-              <div class="grid grid-cols-1">
-                <h3 class="text-2xl">AWS</h3>
-              </div>
-              <div class="grid grid-cols-1">
-                <h3 class="text-xl text-gray-400">EC2</h3>
-              </div>
+        <div class="shadow overflow-hidden sm:rounded-md">
+          <div class="px-4 py-5 bg-white sm:p-6">
+            <div class="grid grid-cols-1">
+              <h3 class="text-2xl">Provider B</h3>
             </div>
-
+            <div class="grid grid-cols-1 pt-2">
+              <select id="provider-b" [(ngModel)]="selectedProviderB"
+                      class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm">
+                <option *ngFor="let optionB of optionsProviderB">
+                  {{optionB.name}}
+                </option>
+              </select>
+            </div>
           </div>
-        </form>
+
+          <div *ngIf="selectedProviderB === 'AWS'">
+            <app-aws-relational-database-service></app-aws-relational-database-service>
+          </div>
+
+          <div *ngIf="selectedProviderB === 'GCP'">
+            <app-gcp-cloud-sql></app-gcp-cloud-sql>
+          </div>
+
+          <div *ngIf="selectedProviderB === 'Azure'">
+            <app-azure-postgresql></app-azure-postgresql>
+          </div>
+
+        </div>
       </div>
+
       <div>
         <div class="shadow overflow-hidden sm:rounded-md">
           <div class="px-4 py-5 bg-white sm:p-6">
             <div class="grid grid-cols-1">
               <h3 class="text-2xl">Summary</h3>
             </div>
-            <div class="grid grid-cols-1">
-              <h3 class="text-xl text-gray-400">Compute Engine</h3>
+
+            <div *ngIf="selectedProviderA === 'AWS'">
+              <app-aws-postgresql-calculate></app-aws-postgresql-calculate>
             </div>
+
+            <div *ngIf="selectedProviderA === 'GCP'">
+              <app-gcp-postgresql-calculate></app-gcp-postgresql-calculate>
+            </div>
+
+            <div *ngIf="selectedProviderA === 'Azure'">
+              <app-azure-postgresql-calculate></app-azure-postgresql-calculate>
+            </div>
+
             <div class="pt-2">
-
-            </div>
-            <div class="grid grid-cols-2 pt-2 bg-[#0000000A] border-b-2 border-b-gray-400 ">
-              <label class="block text-sm font-medium text-[#707070] text-left pl-4 ">Item</label>
-              <label class="block text-sm font-medium text-[#707070] text-right pr-4">Monthly estimate</label>
             </div>
 
-            <div class="grid grid-cols-2 pt-2  border-b-2 border-b-gray-200 ">
-              <label class="block text-sm font-bold text-[#707070] text-left pl-4 ">Total</label>
-              <label class="block text-sm font-bold text-[#707070] text-right pr-4">$17.73</label>
+            <div *ngIf="selectedProviderB === 'AWS'">
+              <app-aws-postgresql-calculate></app-aws-postgresql-calculate>
             </div>
+
+            <div *ngIf="selectedProviderB === 'GCP'">
+              <app-gcp-postgresql-calculate></app-gcp-postgresql-calculate>
+            </div>
+
+            <div *ngIf="selectedProviderB === 'Azure'">
+              <app-azure-postgresql-calculate></app-azure-postgresql-calculate>
+            </div>
+
           </div>
-
         </div>
       </div>
     </div>
